--- a/templates/news-list.twig
+++ b/templates/news-list.twig
@@ -2,7 +2,7 @@
 <h1>Notícias Disponíveis</h1>
 <div class="btn-toolbar" role="toolbar" aria-label="">
     <div class="btn-group" role="group" aria-label="">
-        <button type="button" class="btn btn-primary">Atualizar Lista</button>
+        <a href="{{path_for('news-list')}}" class="btn btn-primary">Atualizar Lista</a>
     </div>
 </div>
 <table class="table">
