--- a/templates/sendnews-preview.twig
+++ b/templates/sendnews-preview.twig
@@ -1,5 +1,6 @@
 {% extends "base.twig" %} {% block title %} Pre-visualização do e-mail - Enviar Newsletter {% endblock title %} {% block content %}
 <h1>Pre-visualização do e-mail</h1>
+<form method="Post" action="{{path_for('sendnews-send')}}">
 <label>Mensagem:</label>
 <div class="border p-1" id="preview">
     <h1>Newsletter da Semana</h1>
@@ -10,12 +11,13 @@
 </div>
 <div class="form-group">
   <label for="">Para:</label>
-  <input type="text"
-    class="form-control" name="email" id="email" aria-describedby="helpId" placeholder="" value="michel.regis@prnewswire.com.br" disabled>
+  <input type="email"
+    class="form-control" name="email" id="email" aria-describedby="helpId" placeholder="" value="michel.regis@prnewswire.com.br">
 </div>
 <div class="btn-toolbar" role="toolbar" aria-label="">
     <div class="btn-group" role="group" aria-label="">
-        <button type="button" class="btn btn-primary">Enviar Newsletter</button>
+        <button type="submit" class="btn btn-primary">Enviar Newsletter</button>
     </div>
 </div>
+</form>
 {% endblock content %}
